# norgolith-tree-sitter

./: ADDING_LANGUAGES.md  Cargo.toml  README.md  flake.nix  plugin.toml  theme.css
src/: highlight.rs  lib.rs  ts_highlight.rs
src/queries/: bash.scm  c.scm  cpp.scm  css.scm  diff.scm  dockerfile.scm  ecma.scm  elixir.scm  go.scm  html.scm  html_tags.scm  java.scm  javascript.scm  json.scm  lua.scm  make.scm  markdown.scm  markdown_injections.scm  markdown_inline.scm  nix.scm  php.scm  python.scm  ruby.scm  rust.scm  sql.scm  tera.scm  tera_injections.scm  toml.scm  typescript.scm  yaml.scm
