[package]
name = "norgolith-tree-sitter-highlight"
version = "0.2.0"
edition = "2021"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com"]
license = "GPL-2.0"
description = "Tree-sitter syntax highlighting plugin for Norgolith"
repository = "https://github.com/norgolith/norgolith-tree-sitter-highlight"

[lib]
crate-type = ["cdylib"]

[dependencies]
tree-sitter = "~0.26"
tree-sitter-rust = "~0.24"
tree-sitter-python = "~0.23"
tree-sitter-javascript = "~0.25"
tree-sitter-html = "~0.23"
tree-sitter-css = "~0.23"
tree-sitter-bash = "~0.25"
tree-sitter-nix = "~0.3"
tree-sitter-elixir = "~0.3"
tree-sitter-typescript = "~0.23"
tree-sitter-md = "~0.5"
tree-sitter-c = "~0.24"
tree-sitter-cpp = "~0.23"
tree-sitter-java = "~0.23"
tree-sitter-json = "~0.24"
tree-sitter-yaml = "~0.7"
tree-sitter-toml-updated = "~0.20"
tree-sitter-ruby = "~0.23"
scraper = "~0.23"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter-highlight = "~0.26"
norgolith-plugin-sdk = "1.0.1"

[dev-dependencies]
libtest-mimic = "0.8.2"
